--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,18 +1,31 @@
 [project]
 name = "food-social-network"
 version = "0.1.0"
-description = "A food social network project"
+description = "Food Social Network API"
 readme = "README.md"
-requires-python = ">=3.12"
-dependencies = []
+requires-python = ">=3.11"
+dependencies = [
+    "fastapi>=0.109.0",
+    "uvicorn[standard]>=0.27.0",
+    "sqlalchemy>=2.0.25",
+    "alembic>=1.13.1",
+    "pydantic>=2.5.3",
+    "pydantic-settings>=2.1.0",
+    "asyncpg>=0.29.0",
+]
 
 [dependency-groups]
 dev = [
-    "ruff>=0.11.6",
+    "ruff>=0.1.13",
+]
+test = [
+    "pytest>=7.4.4",
+    "pytest-asyncio>=0.23.3",
+    "httpx>=0.26.0",
 ]
 
 [tool.ruff]
-target-version = "py312"
+target-version = "py311"
 exclude = ["venv", ".venv", ".env"]
 
 line-length = 120
