docs(env): add allowed hosts variable to .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 # Server settings
 SERVER__HOST=0.0.0.0
 SERVER__PORT=8000
+SERVER__ALLOWED_ORIGINS=http://localhost:3000
 
 # PostgreSQL settings
 POSTGRES__USER=postgres
