--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pydantic>=2.5.3",
     "pydantic-settings>=2.1.0",
     "asyncpg>=0.29.0",
+    "redis>=5.2.1",
 ]
 
 [dependency-groups]
