--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pydantic-settings>=2.1.0",
     "asyncpg>=0.29.0",
     "redis>=5.2.1",
+    "python-jose>=3.4.0",
 ]
 
 [dependency-groups]
