--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "asyncpg>=0.29.0",
     "redis>=5.2.1",
     "python-jose>=3.4.0",
+    "passlib[argon2]>=1.7.4",
 ]
 
 [dependency-groups]
