--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "uvicorn[standard]>=0.27.0",
     "sqlalchemy>=2.0.25",
     "alembic>=1.13.1",
-    "pydantic>=2.5.3",
+    "pydantic[email]>=2.5.3",
     "pydantic-settings>=2.1.0",
     "asyncpg>=0.29.0",
     "redis>=5.2.1",
