--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,11 +12,15 @@ COPY pyproject.toml uv.lock* ./
 RUN --mount=type=cache,target=/root/.cache/uv \
     --mount=type=bind,source=uv.lock,target=uv.lock \
     --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
-    uv sync --frozen --no-install-project --no-dev
-ADD . /app
-RUN --mount=type=cache,target=/root/.cache/uv \
-    uv sync --frozen --no-dev
+    if [ "$MODE" = "dev" ]; then \
+        uv sync --frozen --no-install-project --group dev; \
+    elif [ "$MODE" = "test" ]; then \
+        uv sync --frozen --no-install-project --group test; \
+    else \
+        uv sync --frozen --no-install-project; \
+    fi
 
+ADD . /app
 
 FROM python:3.12-slim-bookworm
 
