--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,26 @@
 services:
+  nginx:
+    image: nginx:stable-alpine
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - './nginx.conf:/etc/nginx/nginx.conf'
+    depends_on:
+      - backend
+      - frontend
+    networks:
+      - app_network
+
   frontend:
     build: ./frontend
     ports:
       - "3000:3000"
     depends_on:
       - backend
+    networks:
+      - app_network
     restart: unless-stopped
 
   backend:
@@ -36,6 +52,7 @@ services:
       - ./backend/alembic:/app/alembic
     restart: unless-stopped
     networks:
+      - app_network
       - db_network
       - redis_network
 
