--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "redis>=5.2.1",
     "python-jose>=3.4.0",
     "passlib[argon2]>=1.7.4",
+    "python-multipart>=0.0.20",
 ]
 
 [dependency-groups]
