--- a/backend/.pre-commit-config.yaml
+++ b/backend/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     rev: v0.11.7
     hooks:
       - id: ruff
-        args: ["check", "--fix"]
+        args: ["--fix"]
         additional_dependencies: []
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
