--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,10 +43,17 @@ services:
       - REDIS__PORT=6379
       - JWT__SECRET_KEY=your-super-secret-key-in-production
       - MODE=dev
+      - MINIO__HOST=minio
+      - MINIO__PORT=9000
+      - MINIO__ACCESS_KEY=minioadmin
+      - MINIO__SECRET_KEY=minioadmin
+      - MINIO__BUCKET=food-social-network
     depends_on:
       db:
         condition: service_healthy
       redis:
+        condition: service_healthy
+      minio:
         condition: service_healthy
     volumes:
       - ./backend/alembic:/app/alembic
@@ -55,6 +62,7 @@ services:
       - app_network
       - db_network
       - redis_network
+      - minio_network
 
   db:
     image: postgres:15
@@ -90,13 +98,38 @@ services:
     networks:
       - redis_network
 
+  minio:
+    image: minio/minio:latest
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      - MINIO_ROOT_USER=$S3_STORAGE__ACCESS_KEY
+      - MINIO_ROOT_PASSWORD=$S3_STORAGE__SECRET_KEY
+    command: server --console-address ":9001" /data
+    volumes:
+      - minio_data:/data
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "mc", "ready", "local"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - minio_network
+
 networks:
   db_network:
     driver: bridge
   redis_network:
     driver: bridge
+  minio_network:
+    driver: bridge
+  app_network:
+    driver: bridge
 
 volumes:
   alembic_data:
   postgres_data:
-  redis_data: 
+  redis_data:
+  minio_data:
