docs(env): add s3_storage__url to .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,6 +12,7 @@ POSTGRES__DB=food_social_network
 POSTGRES__ECHO=false
 
 # S3 settings
+S3_STORAGE__URL=http://example.com/files/
 S3_STORAGE__HOST=http://localhost
 S3_STORAGE__PORT=9000
 S3_STORAGE__ACCESS_KEY=your-access-key
