docs(env): add server__url to .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,5 @@
 # Server settings
+SERVER__URL=http://localhost
 SERVER__HOST=0.0.0.0
 SERVER__PORT=8000
 SERVER__ALLOWED_ORIGINS=["http://localhost:3000"]
@@ -12,7 +13,6 @@ POSTGRES__DB=food_social_network
 POSTGRES__ECHO=false
 
 # S3 settings
-S3_STORAGE__URL=http://example.com/files/
 S3_STORAGE__HOST=http://localhost
 S3_STORAGE__PORT=9000
 S3_STORAGE__ACCESS_KEY=your-access-key
