--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,10 @@ services:
     depends_on:
       - backend
       - frontend
+      - minio
     networks:
       - app_network
-
+      - minio_network
   frontend:
     build: ./frontend
     ports:
@@ -21,6 +22,7 @@ services:
       - backend
     networks:
       - app_network
+      - minio_network
     restart: unless-stopped
 
   backend:
@@ -31,23 +33,8 @@ services:
         - SERVER__PORT=8000
     ports:
       - "8000:8000"
-    environment:
-      - SERVER__HOST=0.0.0.0
-      - SERVER__PORT=8000
-      - POSTGRES__USER=postgres
-      - POSTGRES__PASSWORD=postgres
-      - POSTGRES__HOST=db
-      - POSTGRES__PORT=5432
-      - POSTGRES__DB=food_social_network
-      - REDIS__HOST=redis
-      - REDIS__PORT=6379
-      - JWT__SECRET_KEY=your-super-secret-key-in-production
-      - MODE=dev
-      - MINIO__HOST=minio
-      - MINIO__PORT=9000
-      - MINIO__ACCESS_KEY=minioadmin
-      - MINIO__SECRET_KEY=minioadmin
-      - MINIO__BUCKET=food-social-network
+    env_file:
+      - backend/.env
     depends_on:
       db:
         condition: service_healthy
@@ -103,10 +90,12 @@ services:
     ports:
       - "9000:9000"
       - "9001:9001"
+    env_file:
+      - backend/.env
     environment:
-      - MINIO_ROOT_USER=$S3_STORAGE__ACCESS_KEY
-      - MINIO_ROOT_PASSWORD=$S3_STORAGE__SECRET_KEY
-    command: server --console-address ":9001" /data
+      - MINIO_ROOT_USER=${S3_STORAGE__ACCESS_KEY}
+      - MINIO_ROOT_PASSWORD=${S3_STORAGE__SECRET_KEY}
+    command: minio server --console-address ':9001' /data &
     volumes:
       - minio_data:/data
     restart: unless-stopped
@@ -115,6 +104,23 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - minio_network
+
+  createbuckets:
+    image: minio/mc
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      sleep 5;
+      mc alias set myminio http://minio:9000 $S3_STORAGE__ACCESS_KEY $S3_STORAGE__SECRET_KEY;
+      mc mb myminio/images;
+
+      exit 0;
+      "
+    env_file:
+      - backend/.env
     networks:
       - minio_network
 
