--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,7 @@ events {
 http {
     server {
         listen 80;
+        server_name localhost;
 
         location /api {
             proxy_pass http://backend:8000;
@@ -14,8 +15,24 @@ http {
         }
 
         location /docs {
-           proxy_pass http://backend:8000;
-           proxy_set_header Host $host;
+            proxy_pass http://backend:8000;
+            proxy_set_header Host $host;
+        }
+
+        location /static {
+            proxy_pass http://minio:9000;
+
+            rewrite ^/static(.*) $1 break;
+
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Host $http_host;
+
+            proxy_connect_timeout 300;
+
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            chunked_transfer_encoding off;
         }
         location /openapi.json {
             proxy_pass http://backend:8000;
