--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,10 +28,12 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.3",
     "react-hot-toast": "^2.5.2",
     "react-input-mask": "^2.0.4",
     "react-number-format": "^5.4.3",
+    "react-swipeable": "^7.0.2",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.4"
