--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,11 +18,14 @@
     "@radix-ui/react-tabs": "^1.1.9",
     "@radix-ui/react-toast": "^1.2.11",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@react-three/drei": "^10.0.7",
+    "@react-three/fiber": "^9.1.2",
     "@tanstack/react-query": "^5.66.11",
     "@tanstack/react-query-devtools": "^5.66.11",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.9.4",
+    "framer-motion": "^12.10.5",
     "lucide-react": "^0.476.0",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
@@ -36,6 +39,7 @@
     "react-swipeable": "^7.0.2",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.176.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
