--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -35,7 +35,7 @@ test = [
 
 [tool.ruff]
 target-version = "py311"
-exclude = ["venv", ".venv", ".env", "src/types/external"]
+exclude = ["venv", ".venv", ".env", "src/typings/external"]
 
 line-length = 120
 lint.select = ["ALL"]
@@ -80,6 +80,7 @@ format.skip-magic-trailing-comma = false
 [tool.mypy]
 python_version = "3.12"
 plugins = ["pydantic.mypy"]
+exclude = ["typings/external", "typings/external/aiobotocore_s3/type_defs.pyi"]
 show_error_context = true
 show_absolute_path = true
 pretty = true
