--- a/backend/.env.example
+++ b/backend/.env.example
@@ -29,6 +29,12 @@ JWT__REFRESH_TOKEN_EXPIRE_DAYS=7
 REDIS__HOST=localhost
 REDIS__PORT=6379
 
+# Elasticsearch settings
+ELASTICSEARCH__HOST=localhost
+ELASTICSEARCH__PORT=9200
+ELASTICSEARCH__USERNAME=elastic
+ELASTICSEARCH__PASSWORD=changeme
+
 # Application settings
 MODE=dev
 PROJECT_NAME=Food Social Network
