refactor(config): rename elastic to elasticsearch

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -30,9 +30,9 @@ REDIS__HOST=localhost
 REDIS__PORT=6379
 
 # Elasticsearch settings
-ELASTICSEARCH__HOST=localhost
+ELASTICSEARCH__HOST=http://elasticsearch
 ELASTICSEARCH__PORT=9200
-ELASTICSEARCH__USERNAME=elastic
+ELASTICSEARCH__USER=elastic
 ELASTICSEARCH__PASSWORD=changeme
 
 # Application settings
