docs(env): add cookie policy env vars example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -25,6 +25,12 @@ JWT__ALGORITHM=HS256
 JWT__ACCESS_TOKEN_EXPIRE_MINUTES=30
 JWT__REFRESH_TOKEN_EXPIRE_DAYS=7
 
+
+# Cookie policy settings
+COOKIE_POLICY__SECURE=true
+COOKIE_POLICY__HTTPONLY=false
+COOKIE_POLICY__SAMESITE=lax
+
 # Redis settings
 REDIS__HOST=localhost
 REDIS__PORT=6379
