--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -32,9 +32,13 @@ dev = [
     "uv-sort>=0.5.1",
 ]
 test = [
+    "asgi-lifespan>=2.1.0",
+    "dirty-equals>=0.9.0",
     "httpx>=0.26.0",
     "pytest>=7.4.4",
     "pytest-asyncio>=0.23.3",
+    "pytest-dotenv>=0.5.2",
+    "python-jose>=3.4.0",
 ]
 
 [tool.ruff]
@@ -81,6 +85,26 @@ format.skip-magic-trailing-comma = false
 [tool.ruff.lint.per-file-ignores]
 "alembic/*" = ["INP001"]
 "tests/*" = ["ANN", "INP001"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = [
+    "-v",
+    "--tb=short",
+    "--strict-markers",
+    "--disable-warnings",
+]
+markers = [
+    "integration: marks tests as integration tests",
+    "unit: marks tests as unit tests",
+    "slow: marks tests as slow running",
+]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "session"
+env_files = [".test.env"]
 
 [tool.mypy]
 python_version = "3.12"
