chore(deps): add faker test dependency

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -34,6 +34,7 @@ dev = [
 test = [
     "asgi-lifespan>=2.1.0",
     "dirty-equals>=0.9.0",
+    "faker>=37.3.0",
     "httpx>=0.26.0",
     "pytest>=7.4.4",
     "pytest-asyncio>=0.23.3",
