chore(deps): add aiofiles test dependency

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -32,6 +32,7 @@ dev = [
     "uv-sort>=0.5.1",
 ]
 test = [
+    "aiofiles>=24.1.0",
     "asgi-lifespan>=2.1.0",
     "dirty-equals>=0.9.0",
     "faker>=37.3.0",
