--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,9 @@ API__ELASTICSEARCH__PORT=9200
 API__ELASTICSEARCH__USER=elastic
 API__ELASTICSEARCH__PASSWORD=changeme
 
+## NATS settings
+API__NATS__URL=nats://nats:4222
+
 ## Application settings
 API__MODE=dev
 API__PROJECT_NAME=Food Social Network
