docs(env): add pythonpath variable

--- a/.env.example
+++ b/.env.example
@@ -51,7 +51,7 @@ API__NATS__URL=nats://nats:4222
 ## Application settings
 API__MODE=dev
 API__PROJECT_NAME=Food Social Network
-API__PYTHONPATH=./src
+PYTHONPATH=./src
 
 
 # RECSYS CONFIGURATION
