--- a/.env.example
+++ b/.env.example
@@ -51,7 +51,7 @@ API__TESTS__USE_REAL_RECS_MICROSERVICE=false
 ## Application settings
 API__MODE=dev
 API__PROJECT_NAME=Food Social Network
-API__PYTHONPATH=./src
+PYTHONPATH=./src
 
 
 # RECSYS CONFIGURATION
