docs(env): add tests variables env examples

--- a/.env.example
+++ b/.env.example
@@ -45,8 +45,8 @@ API__ELASTICSEARCH__PORT=9200
 API__ELASTICSEARCH__USER=elastic
 API__ELASTICSEARCH__PASSWORD=changeme
 
-## NATS settings
-API__NATS__URL=nats://nats:4222
+## Tests settings
+API__TESTS__USE_REAL_RECS_MICROSERVICE=false
 
 ## Application settings
 API__MODE=dev
