docs(env): add tests variables env examples

--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,9 @@ API__ELASTICSEARCH__PORT=9200
 API__ELASTICSEARCH__USER=elastic
 API__ELASTICSEARCH__PASSWORD=changeme
 
+## Tests settings
+API__TESTS__USE_REAL_RECS_MICROSERVICE=false
+
 ## Application settings
 API__MODE=dev
 API__PROJECT_NAME=Food Social Network
