--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,12 @@
 FROM ghcr.io/astral-sh/uv:python3.12-bookworm-slim AS builder
 
+ARG API__MODE=prod
 ENV PYTHONPATH="/app" \
     UV_COMPILE_BYTECODE=1 \
     UV_LINK_MODE=copy \
     UV_PYTHON_DOWNLOADS=0 \
-    PYTHONUNBUFFERED=1
+    PYTHONUNBUFFERED=1 \
+    API__MODE=$API__MODE
 
 WORKDIR /app
 
@@ -13,14 +15,14 @@ COPY pyproject.toml uv.lock* ./
 RUN --mount=type=cache,target=/root/.cache/uv \
     --mount=type=bind,source=uv.lock,target=uv.lock \
     --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
-    if [ "$MODE" = "dev" ]; then \
+    if [ "$API__MODE" = "dev" ]; then \
         uv sync --frozen --no-install-project --group dev; \
-    elif [ "$MODE" = "test" ]; then \
+    elif [ "$API__MODE" = "test" ]; then \
         uv sync --frozen --no-install-project --group test; \
     else \
         uv sync --frozen --no-install-project; \
     fi
-    
+
 ADD . /app
 
 FROM python:3.12-slim-bookworm
@@ -32,4 +34,8 @@ ENV PATH="/app/.venv/bin:$PATH"
 
 EXPOSE 8000
 
-CMD alembic upgrade head && uvicorn src.main:app --host 0.0.0.0 --port 8000 
+CMD alembic upgrade head && if [ "$API__MODE" = "test" ]; then \
+    python -m pytest -s -v --cov=src; \
+else \
+    uvicorn src.main:app --host 0.0.0.0 --port 8000; \
+fi
