--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,12 +7,12 @@ requires-python = ">=3.11"
 dependencies = [
     "aiobotocore==2.21.1",
     "alembic>=1.13.1",
+    "argon2-cffi>=23.1.0",
     "asyncpg>=0.29.0",
     "dishka[fastapi]>=1.6.0",
     "elasticsearch>=9.0.1",
     "fastapi>=0.109.0",
     "faststream[nats]>=0.5.42",
-    "passlib[argon2]>=1.7.4",
     "pydantic[email]>=2.5.3",
     "pydantic-settings>=2.1.0",
     "python-jose>=3.4.0",
@@ -37,7 +37,7 @@ test = [
     "asgi-lifespan>=2.1.0",
     "dirty-equals>=0.9.0",
     "faker>=37.3.0",
-    "freezegun>=1.5.2",
+    "freezegun",
     "httpx>=0.26.0",
     "pytest>=7.4.4",
     "pytest-asyncio>=0.23.3",
