--- a/docker-compose.test.api.yml
+++ b/docker-compose.test.api.yml
@@ -18,7 +18,6 @@ services:
       - API__REDIS__HOST=test-redis
       - API__REDIS__PORT=6379
       - API__REDIS__PASSWORD=redis
-      - API__NATS__URL=nats://test-nats:4222
       - API__MINIO__ENDPOINT_URL=http://test-minio:9000
       - API__MINIO__HOST=http://test-minio
       - API__MINIO__PORT=9000
@@ -30,6 +29,7 @@ services:
       - API__S3_STORAGE__ACCESS_KEY=${API__S3_STORAGE__ACCESS_KEY}
       - API__S3_STORAGE__SECRET_KEY=${API__S3_STORAGE__SECRET_KEY}
       - API__NATS__URL=nats://test-nats:4222
+      - API__COOKIE_POLICY__SECURE=false
       - API__MODE=test
     env_file:
       - path: .env
