chore(config): remove tests from mypy exclude

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -114,7 +114,7 @@ env_files = [".test.env"]
 [tool.mypy]
 python_version = "3.12"
 plugins = ["pydantic.mypy"]
-exclude = ["typings/external", "typings/external/aiobotocore_s3/type_defs.pyi", "tests/"]
+exclude = ["typings/external", "typings/external/aiobotocore_s3/type_defs.pyi"]
 show_error_context = true
 show_absolute_path = true
 pretty = true
