--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -30,12 +30,13 @@ FROM python:3.12-slim-bookworm
 WORKDIR /app
 COPY --from=builder --chown=app:app /app /app
 
-ENV PATH="/app/.venv/bin:$PATH"
+ENV PATH="/app/.venv/bin:$PATH" \
+    PYTHONPATH="/app"
 
 EXPOSE 8000
 
 CMD alembic upgrade head && if [ "$API__MODE" = "test" ]; then \
     python -m pytest -s -vv --cov=src; \
 else \
-    uvicorn src.main:app --host 0.0.0.0 --port 8000; \
+    python src/init_superuser.py && uvicorn src.main:app --host 0.0.0.0 --port 8000; \
 fi
