docs(env): add superuser vars to .env.example

--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,12 @@ API__NATS__URL=nats://nats:4222
 ## Tests settings
 API__TESTS__USE_REAL_RECS_MICROSERVICE=false
 
+
+# Superuser settings
+API__SUPERUSER__USERNAME=vkuswipe_admin
+API__SUPERUSER__EMAIL=admin@example.com
+API__SUPERUSER__PASSWORD=AReallyStronglyPassword!1234
+
 ## Application settings
 API__MODE=dev
 API__PROJECT_NAME=Food Social Network
