--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,13 @@
-FROM node:alpine as build
+FROM node:alpine
+
+WORKDIR /app
 
 COPY package.json package-lock.json ./
+
 RUN npm ci --quiet
+
 COPY . .
+
+EXPOSE 3000
 
 CMD ["npm", "run", "dev"]
