--- a/.env.example
+++ b/.env.example
@@ -85,3 +85,19 @@ RECSYS__ASGI_FASTSTREAM__PORT=8001
 
 # Application settings
 RECSYS__MODE=dev
+
+
+# FRONTEND CONFIGURATION
+
+## Server settings
+FRONTEND__API__URL=http://localhost:8000
+
+## Storage settings
+FRONTEND__S3_STORAGE__URL=http://localhost:9000/static/
+
+## Application settings
+FRONTEND__MODE=development
+
+## Client-side settings
+NEXT_PUBLIC_S3_STORAGE_URL=http://localhost:9000/static/
+NEXT_PUBLIC_APP_MODE=development
