--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -1,7 +1,71 @@
+# Зависимости
 node_modules
-.git
-.DS_Store
-dist
-build
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Файлы сборки
+.next/
+out/
+build/
+dist/
+
+# Переменные окружения
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Логи
 *.log
+
+# Кэш
+.eslintcache
+.next
+.cache
+.parcel-cache
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Git
+.git
+.gitignore
+
+# Docker
+Dockerfile*
+.dockerignore
+
+# README и документация
+README.md
+*.md
+
+# Тестовые файлы
+__tests__/
+**/*.test.js
+**/*.test.jsx
+**/*.test.ts
+**/*.test.tsx
+**/*.spec.js
+**/*.spec.jsx
+**/*.spec.ts
+**/*.spec.tsx
+jest.config.js
+
+# Временные файлы
+*.tmp
+*.temp
