--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,7 @@ http {
 
         location /static {
             proxy_pass http://minio:9000;
-
+            client_max_body_size 20M;
             rewrite ^/static(.*) $1 break;
 
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
